--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,19 @@ __pycache__/
 *.so
 
 # NMRNet
+app/*
 data/*
 !data/README.md
+test.ipynb
+rebuttal1.2.ipynb
+rebuttal1.3.ipynb
+rebuttal1.3.ipynb
+rebuttal2.1.ipynb
+test.py
+uninmr/utils/data_preparation/nmrshiftdb2_2024_old.py
+script/finetune_5cv_local.sh
+script/finetune_local.sh
+script/infer_local.sh
 
 # Distribution / packaging
 .Python
