update demo notebook

--- a/.gitignore
+++ b/.gitignore
@@ -11,16 +11,16 @@ app/*
 data/*
 !data/README.md
 test.ipynb
-NMRNet.ipynb
+# NMRNet.ipynb
 rebuttal1.2.ipynb
 rebuttal1.3.ipynb
 rebuttal1.4.ipynb
 rebuttal2.1.ipynb
 test.py
 uninmr/utils/data_preparation/nmrshiftdb2_2024_old.py
-script/finetune_5cv_local.sh
-script/finetune_local.sh
-script/infer_local.sh
+# script/finetune_5cv_local.sh
+# script/finetune_local.sh
+# script/infer_local.sh
 
 # Distribution / packaging
 .Python
